--- a/src/components/app.astro
+++ b/src/components/app.astro
@@ -1,4 +1,18 @@
 <div id="app" />
+<div class="indicator">
+  <p class="indicator__text" id="indicator"></p>
+</div>
+
+<div class="control-panel">
+  <button class="control-panel__button" id="prev">Prev [←]</button>
+  <button class="control-panel__button" id="pause">Pause [space]</button>
+  <button class="control-panel__button" id="next">Next [→]</button>
+</div>
+<!-- <div class="descreption-panel">
+  <p class="descreption-panel__text">
+    [z]: ヘルパーの表示切り替え / [左右キー]: カメラモードの切り替え / [space]: 一時停止
+  </p>
+</div> -->
 
 <style>
   @import '@assets/style/app.css';
