--- a/src/assets/style/app.css
+++ b/src/assets/style/app.css
@@ -25,10 +25,13 @@ img {
 
 .control-panel {
   position: absolute;
-  bottom: 10px;
+  bottom: 20px;
   left: 0;
   width: 100%;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: 1fr 1fr;
+  gap: 5px;
   justify-content: center;
   align-items: center;
 
@@ -53,6 +56,20 @@ img {
   }
 }
 
+.helper {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .helper__text {
+    color: #fff;
+    font-size: 12px;
+  }
+}
+
 .indicator {
   position: absolute;
   top: 10px;
@@ -66,5 +83,19 @@ img {
     color: #fff;
     font-size: 12px;
     text-align: center;
+  }
+}
+
+.play-speed {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .play-speed__text {
+    color: #fff;
+    font-size: 12px;
   }
 }
